--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
             if(resultado){
                 document.getElementById('resultado').innerHTML =eval(resultado)
             }
+            else{
+                document.getElementById('resultado').innerHTML = "Nada..."
+            }
         }
     </script>
 </body>
